--- a/VK_Project/PersonalPage/FriendsCell.xib
+++ b/VK_Project/PersonalPage/FriendsCell.xib
@@ -1,21 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FriendsCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FriendsCell" id="gTV-IL-0wX" customClass="FriendsCell" customModule="VK_Project" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="70" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="70" height="100"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKQ-Ed-pXD">
+                        <rect key="frame" x="0.0" y="0.0" width="70" height="100"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nme-CC-EVG">
+                                <rect key="frame" x="14" y="71" width="42" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aUP-5x-u9h">
+                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="QmX-Kb-iBa"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.098039215686274508" green="0.098039215686274508" blue="0.098039215686274508" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="aUP-5x-u9h" firstAttribute="leading" secondItem="vKQ-Ed-pXD" secondAttribute="leading" id="2by-tp-qOB"/>
+                            <constraint firstAttribute="trailing" secondItem="aUP-5x-u9h" secondAttribute="trailing" id="HdR-0Q-JLp"/>
+                            <constraint firstItem="aUP-5x-u9h" firstAttribute="top" secondItem="vKQ-Ed-pXD" secondAttribute="top" id="cLE-dZ-YcO"/>
+                            <constraint firstItem="nme-CC-EVG" firstAttribute="centerX" secondItem="aUP-5x-u9h" secondAttribute="centerX" id="dds-1D-NBX"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="vKQ-Ed-pXD" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CgH-8t-1o9"/>
+                <constraint firstAttribute="trailing" secondItem="vKQ-Ed-pXD" secondAttribute="trailing" id="GnY-XX-whV"/>
+                <constraint firstItem="vKQ-Ed-pXD" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="J2O-fG-xB9"/>
+                <constraint firstAttribute="bottom" secondItem="vKQ-Ed-pXD" secondAttribute="bottom" id="cJr-GZ-7vE"/>
+            </constraints>
+            <connections>
+                <outlet property="friendsName" destination="nme-CC-EVG" id="jFB-5T-ZqN"/>
+                <outlet property="friendsPhoto" destination="aUP-5x-u9h" id="T8u-W1-uUV"/>
+            </connections>
+            <point key="canvasLocation" x="-196" y="129"/>
         </collectionViewCell>
     </objects>
 </document>
